# repetitive

./: Cargo.toml  LICENSE  README.md
examples/swizzle/: Cargo.toml
examples/swizzle/src/: main.rs
repetitive/: Cargo.toml
repetitive/src/: ctx.rs  fragment.rs  fragment_expr.rs  fragment_outer.rs  fragment_value.rs  ident_str.rs  keyword.rs  lib.rs  methods.rs  name.rs  namespace.rs  op.rs  ops.rs  paste.rs  pattern.rs  tokens.rs
repetitive/tests/: concat.rs  for_.rs  if_.rs  let_.rs  match_.rs  methods.rs  normal.rs  ops.rs  pattern.rs  tokens.rs  value.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: ctx.rs  ctx_parse.rs  error.rs  fragment_expr.rs  fragment_outer.rs  fragment_value.rs  keyword.rs  lib.rs  methods.rs  name.rs  namespace.rs  ops.rs  paste.rs  pattern.rs  tokens.rs  unknown.rs
src/context/: error.rs  mod.rs  namespace.rs  unknown.rs  warning.rs
src/expr/: expr.rs  expr_match.rs  methods.rs  mod.rs  ops.rs  value.rs
src/fragment/: fragment.rs  fragment_concat.rs  fragment_expr.rs  fragment_for.rs  fragment_if.rs  fragment_let.rs  fragment_match.rs  fragment_tokens.rs  mod.rs  pattern.rs
src/stages/: context_parse.rs  expand.rs  mod.rs  optimize.rs  peek.rs
src/tokens/: keyword.rs  mod.rs  name.rs  tokens.rs
tests/: at.rs  concat.rs  for_.rs  if_.rs  include.rs  match_.rs  methods.rs  ops.rs  pattern.rs  tokens.rs
