[package]
categories  = [ "rust-patterns" ]
description = "Macro for generating repetitive code"
edition     = "2024"
license     = "MIT"
name        = "repetitive"
readme      = "README.md"
version     = "0.2.2"

[lib]
proc-macro = true

[features]
doc = [  ]

default = [ "doc" ]

[dependencies]
proc-macro2     = "1.0.101"
quote           = "1.0.40"
string-interner = "0.19.0"
syn             = { version = "2.0.106", features = [ "extra-traits", "full" ] }
